tests/bound.E.mlayout.golden
tests/bound.E.mlayout:1:2: error: expected: "%", ":", "@", "]", natural
1 | [-2] N "d" 
  |  ^         
